Some small additions.